fix hamburger ico on mobile
fix hamburger ico on mobile

--- a/src/styles/sections/_header-top-menu-767.scss
+++ b/src/styles/sections/_header-top-menu-767.scss
@@ -16,16 +16,15 @@
     justify-content: space-between;
     padding: 10px 22px 10px 15px;
     .mobile-menu--hamburger-icon {
-      height: 13px;
+      height: 14px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       margin-right: 10px;
       .line {
         width: 16px;
-        height: 1px;
-        background: #000;
-        display: block;
+        border-bottom: 1px solid #000;
+        padding-bottom: 1px;
       }
     }
   }
